@@ -549,3 +549,7 @@ ALTER TABLE system_settings ADD servicelevel_two SMALLINT UNSIGNED DEFAULT '40';
 ALTER TABLE vicidial_lists_fields ADD field_duplicate ENUM('Y','N') default 'N';
 
 UPDATE system_settings SET db_schema_version='1526',db_schema_update_date=NOW() where db_schema_version < 1526;
+
+ALTER TABLE `vicidial_list` CHANGE `alt_phone` `alt_phone` VARCHAR(18) CHARACTER SET utf8 COLLATE utf8_unicode_ci NULL DEFAULT NULL;
+
+UPDATE system_settings SET db_schema_version='1527',db_schema_update_date=NOW() where db_schema_version < 1527;
